--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="deepPurple">#7C4DFF</color>
+    <color name="lightPurple">#CE93D8</color>
+    <color name="almostWhite">#F9F7FF</color>
 </resources>
