--- a/app/src/main/res/menu/bottom_dashboard_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_dashboard_navigation_menu.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/home"
+        android:icon="@drawable/home_icon"
+        android:title="Home" />
+    <item
         android:id="@+id/budgetNav"
         android:icon="@drawable/budget_icon"
         android:title="Budget" />
