--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="deepPurple">#7C4DFF</color>
     <color name="lightPurple">#CE93D8</color>
     <color name="almostWhite">#F9F7FF</color>
+    <color name="grey">#BEBBC2</color>
 </resources>
