--- a/app/src/main/res/layout/dialog_add_transaction.xml
+++ b/app/src/main/res/layout/dialog_add_transaction.xml
@@ -9,7 +9,7 @@
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/textInputAmount"
-        android:layout_width=""
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Enter Expense Amount"
         android:inputType="number"
@@ -71,10 +71,10 @@
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/textInputDesc"
-        android:layout_width=""
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Enter Description"
-        android:inputType="number"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
